--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -5,10 +5,10 @@ volumes:
     grafana_data: {}
 
 networks:
-  monitor-net:
+  traefik_overlay_net:
+    external: true
 
 services:
-
   prometheus:
     image: prom/prometheus:v2.36.2
     volumes:
@@ -27,7 +27,7 @@ services:
       - cadvisor
 #      - pushgateway
     networks:
-      - monitor-net
+      - traefik_overlay_net
     deploy:
       placement:
         constraints:
@@ -49,7 +49,7 @@ services:
     ports:
       - 9100:9100
     networks:
-      - monitor-net
+      - traefik_overlay_net
     deploy:
       mode: global
       restart_policy:
@@ -62,7 +62,7 @@ services:
     volumes:
       - "./alertmanager/:/etc/alertmanager/"
     networks:
-      - monitor-net
+      - traefik_overlay_net
     command:
       - '--config.file=/etc/alertmanager/config.yml'
       - '--storage.path=/alertmanager'
@@ -83,7 +83,7 @@ services:
     ports:
       - 8080:8080
     networks:
-      - monitor-net
+      - traefik_overlay_net
     deploy:
       mode: global
       restart_policy:
@@ -101,7 +101,7 @@ services:
     env_file:
       - ./grafana/config.monitoring
     networks:
-      - monitor-net
+      - traefik_overlay_net
     user: "472"
     deploy:
       placement:
