--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -1,8 +1,11 @@
 version: '3.7'
 
 volumes:
-    prometheus_data: {}
-    grafana_data: {}
+    prometheus:
+    prometheus_data: 
+    alertmanager:
+    grafana_provisioning: 
+    grafana_data: 
 
 networks:
   traefik_overlay_net:
@@ -12,7 +15,7 @@ services:
   prometheus:
     image: prom/prometheus:v2.36.2
     volumes:
-      - ./prometheus/:/etc/prometheus/
+      - prometheus:/etc/prometheus/
       - prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
@@ -60,7 +63,7 @@ services:
     ports:
       - 9093:9093
     volumes:
-      - "./alertmanager/:/etc/alertmanager/"
+      - alertmanager:/etc/alertmanager/"
     networks:
       - traefik_overlay_net
     command:
@@ -97,9 +100,9 @@ services:
       - 3000:3000
     volumes:
       - grafana_data:/var/lib/grafana
-      - ./grafana/provisioning/:/etc/grafana/provisioning/
-    env_file:
-      - ./grafana/config.monitoring
+      - grafana_provisioning:/etc/grafana/provisioning/
+    #env_file:
+    #  - ./grafana/config.monitoring
     networks:
       - traefik_overlay_net
     user: "472"
