--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -101,8 +101,8 @@ services:
     volumes:
       - grafana_data:/var/lib/grafana
       - grafana_provisioning:/etc/grafana/provisioning/
-    #env_file:
-    #  - ./grafana/config.monitoring
+    env_file:
+      - etc/grafana/config.monitoring
     networks:
       - traefik_overlay_net
     user: "472"
